# shadow-health

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.miscale.yml  docker-compose.yml  pyproject.toml  tailwind.config.js
.claude/: launch.json
android/: AndroidManifest.xml  README.md  build.ps1  settings.gradle.kts
app/: auth.py  config.py  db.py  deps.py  main.py  models.py  timeutil.py
docs/: audit-2026-07-10.md  deploy.md  future-roadmap.md  handover.md  legacy-migration-runbook.md  mobile-sync.md  offline-plan.md  subpath-agent-plan.md
gateway/: Dockerfile  README.md  miscale_listener.py
mcp_server/: README.md  __init__.py  __main__.py  server.py
migrations/: env.py
scripts/: fix_miscale_ts.py  freeze_personal_data.sql  import_off_products.py  migrate_personal_data.py
static/: app.css  manifest.json  offline.html  sw.js
templates/: achievements.html  agent_log.html  ai.html  base.html  diet.html  exercises.html  fitness.html  foods.html  habits.html  imports.html  labs.html  login.html  metrics.html  more.html  plan_detail.html  plans.html  recipes.html  report.html  report_annual.html  report_daily.html  report_month_detail.html  review.html  review_detail.html  scale.html  settings.html  today.html  workout.html  workout_timer.html
tests/: conftest.py  test_agent_channel.py  test_agent_log.py  test_agent_v5.py  test_diet_autocatalog.py  test_fix_miscale_ts.py  test_form_parsing.py  test_gateway_parse.py  test_llm_meal_parse.py  test_mcp_tools.py  test_migrate_legacy.py  test_monthly_report.py  (+10 more)
(+137 files in other folders)
