[project]
name = "shadow-health"
version = "0.1.0"
description = "单用户局域网自用的健康/饮食/运动管理 Web 应用"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "markdown>=3.7",
    "apscheduler>=3.10,<4",
    "pyzipper>=0.3.6",
    "py7zr>=0.22",
    "openpyxl>=3.1",
    "anthropic>=0.79",
    "openai>=1.60",
    # Linux 部署必需：python:3.12-slim 无系统 tzdata，ZoneInfo("Asia/Shanghai") 依赖 pip 版
    #（锁文件里 tzdata 原本仅 sys_platform=='win32' 才装，这里显式提为主依赖）
    "tzdata>=2024.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
]

[tool.uv]
package = false
